--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
     </header>
 
     <div class="hero" id="about">
-      <img class="headshot" src="assets/headshot.jpeg" alt="Headshot of Leo Sequenzia" />
+      <img class="headshot" src="C323FD3A-85A1-41D5-BFFB-DE919B20FFOA_1_201_a.jpeg" alt="Headshot of Leo Sequenzia" />
       <div>
         <h1>Personal Resume Site</h1>
         <p>
